# mmdlldeps

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/mmdlldeps/: __main__.py  deptree.py  dumpbin.py  executor.py  systemdlls.py  vsenv.bat  windowssdk.py
tests/: test_dumpbin.py  test_systemdlls.py
